# SoICT-LLM-Pruner

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py  utils.py
.github/workflows/: ci.yml
Notebook/: Demo.ipynb  Demo_gradio.ipynb  Demo_library.ipynb  Demo_llama32_1B_activation_estimation.ipynb
block_level_pruner/: BlockPruner.py
distiller/: __init__.py  hybrid_distiller.py  logits_distiller.py
docs/: architecture.md  migration.md  release.md
docs/assets/: qwen2.5-vl-architecture.md  qwen3-vl-architecture.md
docs/status/: README.md  architecture.md  issues.md  maintenance.md  overview.md  roadmap.md
element_level_pruner/: ElementPruner.py
estimator/: __init__.py  _shared.py  block_estimator.py  element_estimator.py  layer_estimator.py
examples/evaluation/: measure_latency.py
examples/pruning/: basic_usage.py
examples/structured/: llm_pruner_usage.py
layer_level_pruner/: LayerPruner.py
measurer/: __init__.py  general_measure.py  sample_run.py
notebooks/: demo_library.ipynb
pruner/: __init__.py  _shared.py
pruner/block_level_pruner/: BlockPruner.py  __init__.py
pruner/element_level_pruner/: ElementPruner.py  __init__.py
pruner/layer_level_pruner/: LayerPruner.py  __init__.py
scripts/recovery/: finetune_llama.py  finetune_qwen.py  teacher_correction_accelerate.py
scripts/validation/: validate_real_qwen_vlm.py
soict_llm_pruner_core/: __init__.py  model_adapter.py  registry.py
src/carve_lm/: __init__.py
src/soict_llm_pruner/: __init__.py
teacher_correction/: __init__.py  fine_tune_llama.py  fine_tune_qwen.py  teacher_correction_accelerate.py
tests/fixtures/: synthetic_models.py
(+220 files in other folders)
