[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soict-llm-pruner"
version = "0.1.0"
description = "Unified pruning library for decoder-only large language models."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Phan Hoang Nam", email = "phanhoangnam234@gmail.com" },
]
keywords = ["llm", "pruning", "transformers", "compression", "structured-pruning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.0.0",
  "transformers>=4.38.2",
  "tqdm>=4.65.0",
]

[project.optional-dependencies]
train = [
  "accelerate>=0.30.0",
  "datasets>=2.14.0",
  "matplotlib>=3.7.0",
  "wandb>=0.16.0",
]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "twine>=5.0.0",
]
notebooks = [
  "jupyter>=1.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
src = ["src", "tests", "examples", "scripts"]
line-length = 120
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["soict_llm_pruner"]
